--- a/프로젝트 주제.md
+++ b/프로젝트 주제.md
@@ -7,9 +7,9 @@ JSP를 처음 접하며 어떤 프로젝트를 해볼까 많은 고민이 있었
 그래서 게시판을 만들어보는건 어떨까 하여 자그마한 게시판을 만들어보려 합니다.
 
 ### 기능
-	회원가입 및 로그인
-    게시글 작성 및 수정, 삭제, 조회
-    회원 정보 및 게시글 정보는 데이터베이스를 사용하여 연동해볼 계획입니다.
-    
-    	
-
+	__회원가입__
+    	가입, 수정, 삭제, 찾기
+    로그인
+    	로그인 성공, 실패
+    게시글
+    	작성, 수정, 조회, 삭제
