--- a/프로젝트 주제.md
+++ b/프로젝트 주제.md
@@ -7,7 +7,7 @@ JSP를 처음 접하며 어떤 프로젝트를 해볼까 많은 고민이 있었
 그래서 게시판을 만들어보는건 어떨까 하여 자그마한 게시판을 만들어보려 합니다.
 
 ### 기능
-	__회원가입__
+	회원가입
     	가입, 수정, 삭제, 찾기
     로그인
     	로그인 성공, 실패
