--- a/프로젝트 주제.md
+++ b/프로젝트 주제.md
@@ -1,3 +1,10 @@
+# 2주차 코드
+기본적인 로그인 형식의 폼을 사용하여 파라미터 값 전송까지 구현하였습니다.  
+
+소스파일은 Main.jsp, Login.jsp, MainScreen.jsp, Register.jsp 네 개가 있습니다.  
+게시판 화면 구성은 생각중입니다.  
+***
+
 # JSP-Project_201810972 
 서원대학교 컴퓨터공학과 201810972 유승민, 3학년 1학기 JSP 프로젝트
 ## 게시판 프로젝트
