--- a/프로젝트 주제.md
+++ b/프로젝트 주제.md
@@ -1,8 +1,12 @@
-# 2주차 코드
-기본적인 로그인 형식의 폼을 사용하여 파라미터 값 전송까지 구현하였습니다.  
+# 3주차 코드
+입력받은 값들을 전송하고 request를 이용하여 값을 받고, 변수에 저장하는 코드를 구현하였습니다.  
+Login.jsp에서 받아서 그 값을 MainScreen.jsp로 전달합니다.
 
-소스파일은 Main.jsp, Login.jsp, MainScreen.jsp, Register.jsp 네 개가 있습니다.  
-게시판 화면 구성은 생각중입니다.  
+***
+# 2주차 코드
+기본적인 로그인 형식의 폼을 사용하여 submit, button 사용시 페이지 이동 까지 구현하였습니다.
+
+소스파일은 Main.jsp, MainScreen.jsp, Register.jsp 네 개가 있습니다.
 ***
 
 # JSP-Project_201810972 
