--- a/프로젝트 주제.md
+++ b/프로젝트 주제.md
@@ -1,6 +1,7 @@
 # 3주차 코드
 입력받은 값들을 전송하고 request를 이용하여 값을 받고, 변수에 저장하는 코드를 구현하였습니다.  
-Login.jsp에서 받아서 그 값을 MainScreen.jsp로 전달합니다.
+Login.jsp에서 받아서 그 값을 MainScreen.jsp로 전달합니다.  
+회원가입시 정보를 저장하는 부분은 구현하지 못하였고, 전송 후 잘 가입되었다는 alert를 주었습니다.
 
 ***
 # 2주차 코드
